# mailroom

./: .env.example  .gitignore  AGENTS.md  CADDY_README.md  Caddyfile  Caddyfile.windows  DOCUMENTATION_FIXES_SUMMARY.md  DuckDB_Developer_Reference.md  FORMS_ERROR_HANDLING_STATUS.md  Mailroom_Tracking_MVP_Prompt.md  README.md  SECURITY_FIXES_SUMMARY.md  TEST_RESULTS.md  license.txt  package-lock.json  package.json  pyproject.toml  sample_recipients.csv  tailwind.config.js  task_16.3_verification.md  tmp_inspect_live_schema.py  tmp_repro_package_status_update.py  tmp_status_repro.py  verify_qr_code_display.py  verify_system_settings.py
app/: __init__.py  config.py  main.py  templates.py
app/database/: README.md  __init__.py  connection.py  migrations.py  schema.py  write_queue.py
app/decorators/: __init__.py  auth.py
app/middleware/: __init__.py  auth.py  csrf.py  rate_limit.py  (+1 more)
docs/: ACCESSIBILITY_TESTING_CHECKLIST.md  ACCESSIBILITY_VERIFICATION.md  API_DOCUMENTATION.md  API_ENDPOINTS_COMPLETE.md  CADDY_SETUP.md  CONFIGURATION.md  CSRF_IMPLEMENTATION_GUIDE.md  DAISYUI_INTEGRATION.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  HEALTH_ENDPOINT.md  INITIAL_SUPER_ADMIN_BOOTSTRAP.md  RBAC_IMPLEMENTATION.md  SECURITY_FIXES.md  SECURITY_IMPLEMENTATION.md  USER_GUIDE_ADMIN.md  USER_GUIDE_OPERATOR.md  USER_GUIDE_SUPER_ADMIN.md  USER_MANAGEMENT_IMPLEMENTATION.md
plans/: code_review_report.md  critical_fix_2_settings_plan.md  feature_improvements_estimation.md  hardware_deployment_testing_estimation.md
qrcode generator test/: README.md  requirements.txt
scripts/: README.md  backfill_recipient_departments.py  backup.ps1  bootstrap_super_admin.py  cleanup_backups.ps1  database_admin.ps1  init_database.ps1  install_caddy.ps1  install_service.ps1  migrate.py  migrate_duckdb_to_sqlite.py  playwright_login_smoke.js  playwright_operator_visual_smoke.js  reset_all_passwords.py
templates/: base.html  base_minimal.html
tests/: README.md  __init__.py  conftest.py  test_rbac.py  test_security_fixes.py
(+119 files in other folders)
