[project]
name = "mailroom-tracking"
version = "1.0.0"
description = "Internal mailroom package tracking system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0,<1.0.0",
    "starlette>=0.49.1,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "argon2-cffi>=23.1.0,<26.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-magic>=0.4.27,<1.0.0",
    "qrcode[pil]>=7.4.0,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pip-audit>=2.7.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
